@@ -570,6 +570,34 @@ loadNamespace <- function (package, lib.loc = NULL,
             allGenerics <- unique(c(methods:::.getGenerics(ns),
                                    methods:::.getGenerics(parent.env(ns))))
             expMethods <- nsInfo$exportMethods
+            ## check for generic functions corresponding to exported methods
+            addGenerics <- expMethods[is.na(match(expMethods, exports))]
+            if(length(addGenerics)) {
+                nowhere <- sapply(addGenerics, function(what) !exists(what, envir = ns))
+                if(any(nowhere))
+                    stop(gettextf("No function found corresponding to methods exports for: %s",
+                                  paste(addGenerics[nowhere], collapse = ", ")),
+                         domain = NA)
+                ## skip primitives
+                addGenerics <- addGenerics[
+                       sapply(addGenerics, function(what) ! is.primitive(get(what, envir = ns)))]
+                ## the rest must be generic functions, implicit or local
+                ok <- sapply(addGenerics, function(what) methods::is(get(what, envir = ns), "genericFunction"))
+                if(!all(ok)) # unclear how this could happen, but ...
+                    stop(gettextf("Functions for exporting methods must have been made generic, explicitly or implicitly; not true for %s",
+                                  paste(addGenerics[!ok], collapse = ", ")),
+                         domain = NA)
+### <note> Uncomment following to report any local generic functions
+### that should have been exported explicitly.  But would be reported
+### whenever the package is loaded, which is not when it is relevant.
+### </note>
+                ## local <- sapply(addGenerics, function(what) identical(as.character(get(what, envir = ns)@package), package))
+                ## if(any(local))
+                ##     message(gettextf("export(%s) from package %s generated by exportMethods()",
+                ##        paste(addGenerics[local], collapse = ", ")),
+                ##             domain = NA)
+                exports <- c(exports, addGenerics)
+            }
             expTables <- character()
             if(length(allGenerics)) {
                 expMethods <-
@@ -884,10 +912,16 @@ namespaceImportClasses <- function(self, ns, vars) {
 
 namespaceImportMethods <- function(self, ns, vars) {
     allVars <- character()
-    allFuns <- methods:::.getGenerics(ns)
+    allFuns <- methods:::.getGenerics(ns) # all the methods tables in ns
     packages <- attr(allFuns, "package")
-    tPrefix <- methods:::.TableMetaPrefix()
     pkg <- methods:::getPackageName(ns)
+    if(!all(vars %in% allFuns)) {
+        message(gettextf("No methods found in \"%s\" for requests: %s",
+                         pkg, paste(vars[is.na(match(vars, allFuns))], collapse = ", ")),
+                domain = NA)
+        vars <- vars[vars %in% allFuns]
+    }
+    tPrefix <- methods:::.TableMetaPrefix()
     allMethodTables <- methods:::.getGenerics(ns, tPrefix)
     if(any(is.na(match(vars, allFuns))))
         stop(gettextf("requested methods not found in environment/package %s: %s",
@@ -904,10 +938,19 @@ namespaceImportMethods <- function(self, ns, vars) {
             if(is.null(.mergeImportMethods(self, ns, tbl))) # a new methods table
                allVars <- c(allVars, tbl) # import it;else, was merged
         }
-        if(g %in% vars && !exists(g, envir = self, inherits = FALSE) &&
-           exists(g, envir = ns, inherits = FALSE) &&
-           methods:::is(get(g, envir = ns), "genericFunction"))
-            allVars <- c(allVars, g)
+        if(g %in% vars && !exists(g, envir = self, inherits = FALSE)) {
+            if(exists(g, envir = ns) &&
+               methods:::is(get(g, envir = ns), "genericFunction"))
+                allVars <- c(allVars, g)
+            else { # should be primitive
+                fun <- methods::getFunction(g, mustFind = FALSE, where = self)
+                if(is.primitive(fun) || methods::is(fun, "genericFunction")) {}
+                else
+                    warning(gettextf("No generic function found corresponding to requested imported methods for \"%s\" from package \"%s\" (malformed exports?)",
+                                 g, pkg),
+                        domain = NA)
+            }
+        }
     }
     namespaceImportFrom(self, asNamespace(ns), allVars, allFuns, packages)
 }
